# IR-Colorization-Hackathon

./: .env.example  .gitignore  evaluate.ipynb  evaluate.py  project_report.md  pyproject.toml  readme.md  report.md  training.md
.agents/: AGENTS.md
evaluation/: eval_results_0.md  evaluate.py
outputs/metrics/: metrics.csv  summary.json
outputs/report/: evaluation_report.md
src/: predict.py  serve.py  train.py
src/data/: __init__.py  dataset.py  download_gee.py  split_dataset.py
src/models/: discriminator.py  generator.py  sr_model.py
src/utils/: metrics.py
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
web/src/app/about/: page.tsx
web/src/app/api/inference/: route.ts
web/src/app/architecture/: page.tsx
web/src/app/dataset/: page.tsx
web/src/components/animations/: index.tsx
web/src/components/dashboard/: ExportPanel.tsx  HeroSection.tsx  ImageComparison.tsx  MetricCards.tsx  MetricsPanel.tsx  PerformanceChart.tsx  PipelineAnimation.tsx  PipelineStatus.tsx  ResultsDashboard.tsx  UploadPanel.tsx
web/src/components/layout/: AnimatedBackground.tsx  Footer.tsx  Navbar.tsx  ThemeToggle.tsx
web/src/lib/: store.ts
