[project]
name = "ir-colorization"
version = "0.1.0"
description = "Infrared image colorization and enhancement"
readme = "report.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
    "rasterio",
    "scikit-image",
    "tqdm",
    "matplotlib",
    "earthengine-api",
    "ee>=0.2",
    "python-dotenv>=1.2.1",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
